refactor: implement Facade pattern and clean architecture
- Add CourseManagementFacade to orchestrate course, enrollment, and payment operations
- Add AdminManagementFacade to consolidate admin operations with batch processing
- Create EnrollmentService to handle all enrollment-related logic
- Create PaymentService to manage payment processing and webhooks
- Remove AdminService (thin service with no business logic)
- Refactor CourseService to focus only on course CRUD operations
- Update all controllers to use Facade services (reduce dependencies by 50%)
- Clean entities: remove manual setters, use Lombok @Setter
- Add logging with @Slf4j across services
- Create KhoaHocOnlApplication main class
- Add CourseCurriculumRepository

Benefits:
- Reduced controller dependencies from 4 to 2 services
- Better separation of concerns
- Improved testability
- Added batch operations for admin
- Centralized transaction management
- Consistent error handling and logging